Start working on pulling data from the Steam web API

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ DB_NAME=php-mvc
 
 # https://steamcommunity.com/dev/apikey
 # You need a non-limited Steam account to get an API key
-STEAM_WEB_API_KEY=
+STEAM_API_KEY=
