--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
     "guzzlehttp/guzzle": "^7.4",
     "vlucas/phpdotenv": "^5.4",
     "mongodb/mongodb": "^1.12",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "stidges/country-flags": "^2.0",
+    "symfony/cache": "^4.4",
+    "psr/cache": "^1.0",
+    "kevinrob/guzzle-cache-middleware": "~2.0"
   }
 }
