--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
   "require": {
     "guzzlehttp/guzzle": "^7.4",
     "vlucas/phpdotenv": "^5.4",
-    "mongodb/mongodb": "^1.12",
     "ext-pdo": "*",
     "stidges/country-flags": "^2.0",
     "symfony/cache": "^4.4",
     "psr/cache": "^1.0",
-    "kevinrob/guzzle-cache-middleware": "~2.0"
+    "kevinrob/guzzle-cache-middleware": "~2.0",
+    "xpaw/steam-openid": "^2.0"
   }
 }
